# nanosecond-trading-stack

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  IDEA.md  LICENSE  Makefile  PLAN.md  README.md  USAGE.md
.github/workflows/: ci.yml
benchmarks/: matching_bench.cpp  pipeline_bench.cpp
include/nts/: common.h  exchange.h  market_data.h  matching_engine.h  md_sync_gate.h  oms.h  order_gateway.h  orderbook.h  perf_counter.h  pipeline_utils.h  strategy.h  wire_protocol.h
include/nts/instrument/: clock.h  stats.h  tick_sampler.h  tracer.h
include/nts/matching/: orderbook.h  types.h
results/live/mac/: 20260429T104808.txt  20260429T110353.txt  20260501T115551.txt  20260501T120118.txt  20260501T120454.txt  20260501T120556.txt  20260501T120626.txt  20260501T120713.txt  20260501T120739.txt  20260502T050541.txt  20260502T050713.txt  20260502T051324.txt  20260502T051607.txt  20260502T051851.txt  20260502T052222.txt  20260502T060308.txt  20260502T060502.txt  20260502T073412.txt  20260503T052354.txt  20260503T052720.txt  20260503T060107.txt  20260503T061256.txt  20260503T064152.txt  20260503T080939.txt  20260503T081133.txt  20260503T083122.txt  20260503T085125.txt  20260503T085338.txt  20260503T085645.txt  20260503T085916.txt  20260503T090121.txt  20260503T090556.txt  20260503T090731.txt  20260503T091130.txt  (+50 more)
results/mac/: 20260508T090149.txt
src/: exchange.cpp  main.cpp  market_data.cpp  matching_engine.cpp  oms.cpp  order_gateway.cpp  orderbook.cpp  perf_counter.cpp  pipeline_utils.cpp  strategy.cpp
src/instrument/: stats.cpp  tick_sampler.cpp  tracer.cpp
src/matching/: orderbook.cpp
tests/: test_matching_engine.cpp
tools/: USAGE.md  bench_runner.py  md_generator.cpp  tsc_sync_check.cpp
(+126 files in other folders)
